--- a/com.yrtech.SurveyAPI/Properties/Settings.settings
+++ b/com.yrtech.SurveyAPI/Properties/Settings.settings
@@ -1,9 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="com.yrtech.SurveyAPI.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
   <Profiles />
-  <Settings>
-    <Setting Name="com_yrtech_SurveyAPI_localhost_Service" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://123.57.229.128/benzservernew/service.asmx</Value>
-    </Setting>
-  </Settings>
+  <Settings />
 </SettingsFile>
