--- a/com.yrtech.SurveyAPI/com.yrtech.InventoryAPI.csproj
+++ b/com.yrtech.SurveyAPI/com.yrtech.InventoryAPI.csproj
@@ -119,6 +119,8 @@
     <Compile Include="Common\CommonHelper.cs" />
     <Compile Include="Common\OSSClientHelper.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AnswerController.cs" />
+    <Compile Include="Controllers\MasterController.cs" />
     <Compile Include="DTO\Account\AccountDto.cs" />
     <Compile Include="DTO\Answer\AnswerDto.cs" />
     <Compile Include="DTO\Answer\AnswerShopInfoDto.cs" />
@@ -142,6 +144,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Service\AccountService.cs" />
+    <Compile Include="Service\AnswerService.cs" />
     <Compile Include="Service\MasterService.cs" />
   </ItemGroup>
   <ItemGroup>
