--- a/com.yrtech.SurveyDAL/com.yrtech.InventoryDAL.csproj
+++ b/com.yrtech.SurveyDAL/com.yrtech.InventoryDAL.csproj
@@ -69,6 +69,9 @@
     <Compile Include="CarType.cs">
       <DependentUpon>Inventory.tt</DependentUpon>
     </Compile>
+    <Compile Include="HiddenCode.cs">
+      <DependentUpon>Inventory.tt</DependentUpon>
+    </Compile>
     <Compile Include="Inventory.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
